--- a/params/whill_joy2_params.yaml
+++ b/params/whill_joy2_params.yaml
@@ -1,14 +1,5 @@
 whill_joy2:
   ros__parameters:
-    axis_liner: 1
-    axis_angular: 0
-    buttons_deadman: 5  
-    scale_angular: 0.8
-    scale_linear: 0.567
-    buttons_stop: 0
-    buttons_rotation_R: 5
-    buttons_rotation_L: 2
-    buttons_straight: 2
     # if true, permissible to use joystick to control
     use_joycon: true
     # main process rate
@@ -21,13 +12,13 @@ whill_joy2:
     # Speed limit: 8 ~ 60
     # Acceleration limit: 10 ~ 90
     # Deceleration limit: 10 ~ 160
-    speed_profie_config: [
-      10, 16, 48, 10, 16, 40, 8, 56, 72,
-      15, 16, 64, 10, 16, 56, 10, 56, 72,
-      30, 16, 82, 20, 16, 64, 15, 56, 72,
-      45, 16, 90, 20, 24, 64, 18, 56, 72,
-      57, 16, 90, 20, 24, 64, 14, 28, 64,
-      15, 16, 64, 10, 16, 56, 10, 56, 72
+    speed_config_vector: [
+      "10, 16, 48, 10, 16, 40, 8, 56, 72",
+      "15, 16, 64, 10, 16, 56, 10, 56, 72",
+      "30, 16, 82, 20, 16, 64, 15, 56, 72",
+      "45, 16, 90, 20, 24, 64, 18, 56, 72",
+      "57, 16, 90, 20, 24, 64, 14, 28, 64",
+      "15, 16, 64, 10, 16, 56, 10, 56, 72"
     ]
-    # default speed mode. limit: 0 ~ 6
-    speed_mode: 3
+    # default speed step
+    speed_step: 3
